--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                 <div class="land-link">
                     <p>
                         <span class="material-symbols-outlined"> local_florist </span><a
-                            href="our company.html#history">Experience <span></span> Our <span></span> Landscape
-                            <span></span> Design</a>
+                            href="our company.html#history">Experience<span></span>Our <span></span>Landscape
+                            <span></span>Design</a>
                     </p>
                 </div>
             </div>
@@ -284,8 +284,8 @@
                 </p>
             </div>
             <div class="contact-info">
-                <p><i class="fas fa-map-marker-alt"></i> 123 Main St, Anytown, USA</p>
-                <p><i class="fas fa-phone"></i> (123) 456-7890</p>
+                <p><i class="fas fa-map-marker-alt"></i><a href=""> 123 Main St, Anytown, USA</a></p>
+                <p><i class="fas fa-phone"></i><a href="tel:123456789"> (123) 456-7890</a></p>
                 <p>
                     <i class="fas fa-envelope"></i>
                     <a href="mailto:info@example.com">info@example.com</a>
